--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <title>Menú Quirumed - Conexión Directa</title>
+    <title>Menu Mockup</title>
     <style>
         :root { --brand: #034ca8; --border: #e6e8eb; --panel-width: 280px; }
         body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #f4f6f9; overflow: hidden; }
