--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <header>
     <button class="hamburger" onclick="toggleMenu()">☰</button>
-    <div style="margin-left:15px; font-weight:900; color:var(--brand);">QUIRUMED LIVE</div>
+    <div style="margin-left:15px; font-weight:900; color:var(--brand);">Menu Mockup</div>
 </header>
 
 <div id="overlay" onclick="toggleMenu()"></div>
