--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8" />
-    <title>Menú Quirumed - Conexión Directa</title>
+    <title>Menú prueba</title>
     <style>
         :root { --brand: #034ca8; --border: #e6e8eb; --panel-width: 280px; }
         body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #f4f6f9; overflow: hidden; }
@@ -24,7 +24,7 @@
 
 <header>
     <button class="hamburger" onclick="toggleMenu()">☰</button>
-    <div style="margin-left:15px; font-weight:900; color:var(--brand);">QUIRUMED LIVE</div>
+    <div style="margin-left:15px; font-weight:900; color:var(--brand);">Menú prueba</div>
 </header>
 
 <div id="overlay" onclick="toggleMenu()"></div>
