--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         .item .text { overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
         .chevron { width: 22px; height: 22px; display:inline-flex; align-items:center; justify-content:center; flex:0 0 auto; }
-        .chevron svg { width: 18px; height: 18px; stroke: var(--brand); stroke-width: 2.6; fill: none; }
+        .chevron svg { width: 18px; height: 18px; stroke: var(--brand); stroke-width: 2.2; stroke-linecap: round; stroke-linejoin: round; fill: none; }
 
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); display: none; z-index: 1000; }
         #status { padding: 10px; text-align: center; font-size: 12px; background: #fff3cd; }
@@ -52,7 +52,7 @@
 
     let menuTree = [];
 
-    const CHEVRON_SVG = `<span class="chevron" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span>`;
+    const CHEVRON_SVG = `<span class="chevron" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M10 7l5 5-5 5"/></svg></span>`;
 
     const ICON_MAP = {
       'aparatologia y equipos': '📁',
