--- a/index.html
+++ b/index.html
@@ -21,10 +21,39 @@
 
         .item .text { overflow:hidden; text-overflow:ellipsis; white-space:nowrap; }
         .chevron { width: 22px; height: 22px; display:inline-flex; align-items:center; justify-content:center; flex:0 0 auto; }
-        .chevron svg { width: 18px; height: 18px; stroke: var(--brand); stroke-width: 2.2; stroke-linecap: round; stroke-linejoin: round; fill: none; }
+        .chevron svg { width: 18px; height: 18px; stroke: var(--brand); stroke-width: 2.6; fill: none; }
 
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.5); display: none; z-index: 1000; }
         #status { padding: 10px; text-align: center; font-size: 12px; background: #fff3cd; }
+    
+        .column-header{
+            padding: 14px 16px 8px;
+            font-weight: 800;
+            color: var(--brand);
+            font-size: 18px;
+        }
+        .view-all{
+            display:block;
+            padding: 0 16px 12px;
+            color: var(--brand);
+            text-decoration: underline;
+            font-weight: 600;
+            font-size: 14px;
+        }
+        #columns-container{
+            display:flex;
+            height: 100%;
+            overflow-x:auto;
+        }
+        .column{
+            flex: 0 0 330px;
+            border-right: 1px solid #eee;
+            overflow-y:auto;
+        }
+        @media (max-width: 520px){
+            .column{ flex-basis: 86vw; }
+        }
+
     </style>
 </head>
 <body>
@@ -52,7 +81,7 @@
 
     let menuTree = [];
 
-    const CHEVRON_SVG = `<span class="chevron" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M10 7l5 5-5 5"/></svg></span>`;
+    const CHEVRON_SVG = `<span class="chevron" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span>`;
 
     const ICON_MAP = {
       'aparatologia y equipos': '📁',
@@ -114,18 +143,20 @@
             if (!cleanLine.includes('>')) return;
             const parts = cleanLine.split('>').map(p => p.trim());
             let current = root;
-            parts.forEach(name => {
+            parts.forEach((name, i) => {
                 if(!name) return;
                 let node = current.find(n => n.name === name);
                 if (!node) {
-                    node = { name: name, children: [] };
+                    node = { name: name, children: [], path: parts.slice(0, i+1).join(' > ') };
                     current.push(node);
+                } else if (!node.path) {
+                    node.path = parts.slice(0, i+1).join(' > ');
                 }
                 current = node.children;
             });
         });
         menuTree = root.sort((a,b) => a.name.localeCompare(b.name));
-        render(menuTree, 0);
+        render(menuTree, 0, null);
     }
 
     function toggleMenu() {
@@ -142,25 +173,68 @@
         }
     }
 
-    function render(items, level) {
+    function slugifyPath(s){
+        return String(s||'')
+          .normalize('NFD').replace(/[\u0300-\u036f]/g,'')
+          .toLowerCase().trim()
+          .replace(/\s+/g,'-')
+          .replace(/[^a-z0-9\-\/ >]+/g,'')
+          .replace(/\s*>\s*/g,'/')
+          .replace(/\/+/g,'/')
+          .replace(/^-+|-+$/g,'');
+    }
+
+    function render(items, level, parentItem=null) {
         const container = document.getElementById('columns-container');
+
+        // Remove columns to the right (>= level)
         container.querySelectorAll('.column').forEach((col, idx) => { if (idx >= level) col.remove(); });
+
         const colDiv = document.createElement('div');
         colDiv.className = 'column';
+
+        if (level === 0) {
+            const h = document.createElement('div');
+            h.className = 'column-header';
+            h.textContent = 'Todas las categorías';
+            colDiv.appendChild(h);
+        } else if (parentItem) {
+            const h = document.createElement('div');
+            h.className = 'column-header';
+            h.textContent = parentItem.name;
+
+            const a = document.createElement('a');
+            a.className = 'view-all';
+            a.href = '#' + slugifyPath(parentItem.path || parentItem.name);
+            a.textContent = 'Ver ' + parentItem.name;
+
+            colDiv.appendChild(h);
+            colDiv.appendChild(a);
+        }
+
         const ul = document.createElement('ul');
+
         items.forEach(item => {
             const hasChild = item.children && item.children.length > 0;
             const li = document.createElement('li');
             li.className = 'item';
+
             const icon = (level === 0) ? getIconForFirstLevel(item.name) : '';
-            li.innerHTML = `<span class="label">${icon ? `<span class="icon">${icon}</span>` : ``}<span class="text">${item.name}</span></span>${hasChild ? CHEVRON_SVG : ''}`;
+            li.innerHTML =
+                `<span class="label">${icon ? `<span class="icon">${icon}</span>` : ``}<span class="text">${item.name}</span></span>` +
+                `${hasChild ? CHEVRON_SVG : ''}`;
+
             li.onclick = () => {
                 Array.from(ul.children).forEach(el => el.classList.remove('active'));
                 li.classList.add('active');
-                if (hasChild) render(item.children, level + 1);
+
+                if (hasChild) {
+                    render(item.children, level + 1, item);
+                }
             };
             ul.appendChild(li);
         });
+
         colDiv.appendChild(ul);
         container.appendChild(colDiv);
     }
