--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 
     const CHEVRON_SVG = `<span class="chevron" aria-hidden="true"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span>`;
 
+    const BACK_CHEVRON_SVG = `<span class="chevron" aria-hidden="true" style="transform: rotate(180deg);"><svg viewBox="0 0 24 24"><path d="M9 6l6 6-6 6"/></svg></span>`;
+
     const ICON_MAP = {
       'aparatologia y equipos': '📁',
       'ayudas tecnicas para personas mayores': '🧓',
@@ -244,11 +246,8 @@ function getIconForFirstLevel(name) {
 
         const back = document.createElement('button');
         back.className = 'close-btn';
-        back.textContent = '‹';
-        back.style.width = '34px';
-        back.style.height = '34px';
-        back.style.borderRadius = '10px';
-        back.onclick = () => renderRootMenu();
+        back.innerHTML = BACK_CHEVRON_SVG;
+                back.onclick = () => renderRootMenu();
 
         const title = document.createElement('div');
         title.textContent = 'Ofertas';
@@ -287,11 +286,8 @@ function getIconForFirstLevel(name) {
 
             const back = document.createElement('button');
             back.className = 'close-btn';
-            back.textContent = '‹';
-            back.style.width = '34px';
-            back.style.height = '34px';
-            back.style.borderRadius = '10px';
-            back.onclick = () => renderRootMenu();
+            back.innerHTML = BACK_CHEVRON_SVG;
+                        back.onclick = () => renderRootMenu();
 
             const title = document.createElement('div');
             title.textContent = 'Todas las categorías';
