--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .drawer-header{padding:15px 20px;border-bottom:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;font-weight:900;color:var(--brand)}
     .close-x{border:none;background:none;cursor:pointer;font-size:18px;line-height:1}
     #status{padding:10px;text-align:center;font-size:12px;background:#fff3cd}
-    #columns-container{display:flex;flex:1;overflow-x:auto;background:#fff}
+    #columns-container{display:flex;flex:1;overflow-x:hidden;background:#fff}
 
     .column{flex:0 0 330px;border-right:1px solid #eee;overflow-y:auto;height:100%}
     @media (max-width:520px){.column{flex-basis:86vw}}
