--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     header{background:#fff;height:60px;display:flex;align-items:center;padding:0 20px;border-bottom:1px solid var(--border)}
     .hamburger{width:42px;height:42px;border:1px solid var(--border);background:#fff;cursor:pointer;border-radius:8px;font-size:20px;color:var(--brand)}
     #overlay{position:fixed;inset:0;background:rgba(0,0,0,.45);display:none;z-index:1000}
-    #drawer{position:fixed;inset:0 auto 0 0;background:#fff;z-index:1001;display:none;flex-direction:column;box-shadow:10px 0 30px rgba(0,0,0,.12);width:min(1100px,96vw)}
+    #drawer{position:fixed;inset:0 auto 0 0;background:#fff;z-index:1001;display:none;flex-direction:column;box-shadow:10px 0 30px rgba(0,0,0,.12);width:100vw;max-width:100vw}
     .drawer-header{padding:15px 20px;border-bottom:1px solid var(--border);display:flex;justify-content:space-between;align-items:center;font-weight:900;color:var(--brand)}
     .close-x{border:none;background:none;cursor:pointer;font-size:18px;line-height:1}
     #status{padding:10px;text-align:center;font-size:12px;background:#fff3cd}
@@ -171,7 +171,7 @@
   function toggleMenu(open){
     if(open){
       drawer.style.display="flex";
-      drawer.style.width = "min(1100px,96vw)";
+      drawer.style.width = "100vw";
       overlay.style.display="block";
       if(menuTree.length===0) loadData();
       else renderRootMenu();
@@ -186,7 +186,7 @@
     const colWidth = 330; // matches .column flex-basis
     const padding = 60;
     const desired = cols * colWidth + padding;
-    drawer.style.width = `min(${desired}px, 96vw)`;
+    drawer.style.width = `min(${desired}px, 100vw)`;
   }
   }
 
